# uwu-codec-legacy

./: .gitignore  Makefile  README.md  pyproject.toml
uwu_codec/: __init__.py  codec.py  stream_reader.py  stream_writer.py
